--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "test:artillery:html": "powershell -Command \"$timestamp = Get-Date -Format 'yyyy-MM-dd_HH-mm-ss'; New-Item -ItemType Directory -Force -Path reports; artillery run ./artillery.yaml --output reports/load-test-$timestamp.json; artillery report reports/load-test-$timestamp.json --output reports/load-test-$timestamp.html\"",
     "test:artillery:quick": "artillery run ./artillery.yaml",
     "report:open": "powershell -ExecutionPolicy Bypass -File scripts/view-report.ps1",
-    "test:artillery_summary": "powershell -ExecutionPolicy Bypass -File scripts/artillery_summary.ps1"
+    "test:artillery_summary": "powershell -ExecutionPolicy Bypass -File scripts/artillery_summary.ps1",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "test:cypress:login": "cypress run --spec cypress/e2e/login.cy.js",
+    "test:artillery:login": "artillery run ./artillery-login.yaml"
   },
   "dependencies": {
     "@nestjs/common": "^10.4.20",
@@ -42,6 +46,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "artillery": "^2.0.15",
+    "cypress": "^14.5.4",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
