--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "test:artillery:login:html": "powershell -Command \"$timestamp = Get-Date -Format 'yyyy-MM-dd_HH-mm-ss'; New-Item -ItemType Directory -Force -Path reports; artillery run ./artillery-login.yaml --output reports/login-test-$timestamp.json; artillery report reports/login-test-$timestamp.json --output reports/login-test-$timestamp.html\"",
     "test:artillery:login:summary": "powershell -ExecutionPolicy Bypass -File scripts/artillery_login_summary.ps1",
     "test:artillery:login:config": "node scripts/generate-test-data.js && artillery run ./artillery-login-config.yaml",
-    "generate:test-data": "node scripts/generate-test-data.js"
+    "generate:test-data": "node scripts/generate-test-data.js",
+    "sync:html-to-config": "node scripts/sync-html-to-config.js",
+    "sync:html-to-config:simple": "node scripts/sync-html-to-config-simple.js",
+    "watch:html-changes": "node scripts/watch-html-changes.js",
+    "sync:html-to-config:ps": "powershell -ExecutionPolicy Bypass -File scripts/sync-html-to-config.ps1"
   },
   "dependencies": {
     "@nestjs/common": "^10.4.20",
@@ -56,6 +60,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "jsdom": "^26.1.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
