--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
     "sync:html-to-config": "node scripts/sync-html-to-config.js",
     "sync:html-to-config:simple": "node scripts/sync-html-to-config-simple.js",
     "watch:html-changes": "node scripts/watch-html-changes.js",
+    "test:cypress:login:debug:old": "node --inspect ./node_modules/.bin/cypress run --spec cypress/e2e/login.cy.js",
     "sync:html-to-config:ps": "powershell -ExecutionPolicy Bypass -File scripts/sync-html-to-config.ps1"
   },
   "dependencies": {
     "@nestjs/common": "^10.4.20",
     "@nestjs/core": "^10.4.20",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^1000.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
