--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,11 +2,11 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "node",
+      "type": "node", //debug Node.js process (Cypress runs as Node.js)
       "request": "launch",
       "name": "Debug Cypress Config (Node)",
       "program": "${workspaceFolder}/node_modules/cypress/bin/cypress",
-      "args": ["run", "--spec", "cypress/e2e/login.cy.js"],
+      "args": ["run", "--spec", "cypress/e2e/**/*.cy.js"],
       "console": "integratedTerminal",
       "skipFiles": ["<node_internals>/**"],
       "cwd": "${workspaceFolder}"
