--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "request": "launch",
       "name": "Debug Cypress Config (Node)",
       "program": "${workspaceFolder}/node_modules/cypress/bin/cypress",
-      "args": ["run", "--spec", "cypress/e2e/**/*.cy.js"],
+      "args": ["run", "--spec", "cypress/e2e/**/*.cy.js,cypress/support/**/*.js"],
       "console": "integratedTerminal",
       "skipFiles": ["<node_internals>/**"],
       "cwd": "${workspaceFolder}"
